# RATUI

./: .gitignore  FILE_SEARCH.h  Makefile  PathConfig.c  PathConfig.h  README.md  SECTOR_MENU.c  SECTOR_MENU.h  atp  config.ratui  config.rtuconf  config.txt  dev_README.md  meson.build  vr
binary_log/: binary_size_log.txt
doc/: plan.txt
home/: HOMEmain.c  homemain.c
home/BKS/: BKSfunc.c
home/EDS/: EDSfunc.h
home/INS/: INSfunc.c  INSfunc.h  INSmain.c
home/ROS/: ROSfunc.c  ROSfunc.h  ROSmain.c
home/TRS/: TRSfunc.c  TRSfunc.h
include/: FILE_CHECK.h  FILE_UTIL.h  GIT_CMD.h  PATH_CONFIG.h  SECTOR_MENU.h  UI_PRINT.h  help_UI.h
modules/BKS/: BKSfunc.c  BKSfunc.h  BKSmain.c
modules/EDS/: EDSfunc.c  EDSmain.c
modules/INS/: INSfunc.c  INSfunc.h  INSmain.c
modules/ROS/: ROSfunc.c  ROSfunc.h  ROSmain.c
modules/TRS/: TRSfunc.c  TRSmain.c
modules/home/: HOMEmain.c
sample/: ar  cursor.c  selection.c  vr
src/: FILE_CHECK.c  FILE_SEARCH.c  FILE_UTIL.c  GIT_CMD.c  PATH_CONFIG.c  PathConfig.c  SECTOR_MENU.c  UI_PRINT.c  help_UI.c
